Adjust tests and code smells
RISDEV-8750